Apply login state class early to avoid nav layout shifts
See oaworks/discussion#3670

--- a/styles/input.css
+++ b/styles/input.css
@@ -92,6 +92,15 @@
   }
 }
 
+@layer components {
+  html.has-orgkey [data-auth="out"] {
+    display: none;
+  }
+  html:not(.has-orgkey) [data-auth="in"] {
+    display: none;
+  }
+}
+
 /* Custom modal animation */
 @keyframes modalFadeInUp {
   0% {
